erDiagram

Usuarios {
    auto_increment ID_Usuario PK
    varchar-70 Nombre_Usuario
    varchar-20 User
    varchar-20 Password
    choice Tipo_usuario
    email CorreoE
}

Reportes {
    auto_increment ID_Reporte PK
    varchar-100 Nombre_Reporte
    date Fecha_Entrega
    varchar-1000 Descripcion
    choice Opcional
} 

Materias {
    varchar-8 ID_Materia PK
    varchar-100 Nombre_Materia    
    choice Carrera FK "from Carreras"
    varchar-50 Grado
    choise Grupo
}


Generan {
    auto_increment ID_Generacion PK
    varchar-20 Estatus
    file Path_PDF
    varchar-20 Sememestre
    int ID_Materia FK "from Materias"
    int ID_Usuario FK "from Usuarios"
    int ID_Reporte FK "from Reportes"
}

Carreras {
    varchar-8 ID_Carrera PK
    varchar-50 Nombre_Carrera
}

Asignan {
    auto_increment ID_Asignan PK
    int ID_Materia FK "from Materias"
    int ID_Usuario FK "from Usuarios"
}



Usuarios ||--|{ Asignan: c 
Materias ||--|{ Asignan: c 
Asignan ||-- |{ Generan: c
Reportes ||--|{ Generan: c
Carreras||--|{ Materias: c
